tests/fail/unexpected_number.llcl
/*
error: unexpected type
9  |function main(): Int8 {
10 |    printf(10);
               ^^ expected type 'Pointer' but got a number.
11 |
*/

function main(): Int8 {
	printf(10);

	return 0;
}

function printf(pointer: Pointer): Int32;